align key in header and fixing css/h (register page)

--- a/web/design/css/db_style.css
+++ b/web/design/css/db_style.css
@@ -57,7 +57,9 @@ body {
 /******************left menu dashboard************************/
 .dashboard .sidebar {
     padding: 20px;
-    background: url(../images/bk.jpg) no-repeat;
+    background: -webkit-linear-gradient(left, #06b6a4 0%,#27b378 100%);
+    background: -moz-linear-gradient(left, #06b6a4 0%, #27b378 100%);
+    background: linear-gradient(to right, #06b6a4 0%,#27b378 100%);
     background-size: cover;
     height: 100vh;
     width: 10.3%;
@@ -256,7 +258,9 @@ body {
 }
 
 .dashboard .buttonInTable {
-    background: url(../images/RoundedRectangle2.jpg) no-repeat;
+    background: -webkit-linear-gradient(left, #06b6a4 0%,#27b378 100%);
+    background: -moz-linear-gradient(left, #06b6a4 0%, #27b378 100%);
+    background: linear-gradient(to right, #06b6a4 0%,#27b378 100%);
     color: white;
     padding: 10px 25px;
     border-radius: 3px;
@@ -455,7 +459,6 @@ body {
 @media (min-width: 200px) and (max-width: 991px) {
     .dashboard .sidebar {
         padding: 20px;
-        background: url(../images/bk.jpg) no-repeat;
         background-size: cover;
         width: 100%;
         height: auto;
